[package]
edition = "2021"
name = "score_rs"
version = "0.0.1"
authors = ["Moritz Althaus <moritzalthaus@gmx.de>"]
license = "MIT"
repository = "https://github.com/moldhouse/score-rs.git"
homepage = "https://github.com/moldhouse/score-rs.git"
readme = "README.md"

[lib]
name = "score_rs"
crate-type = ["cdylib"]

[features]
default = ["rayon"]

[dependencies]
pyo3 = "=0.20.2"
cfg-if = "1.0.0"
failure = "^0.1.1"
flat_projection = "0.4.0"
log = "0.4.11"
ordered-float = "2.0.1"
ord_subset = "^3.1.0"
rayon = { version = "^1.0", optional = true }
itertools = "0.10.0"
numpy = "0.20.0"

[dev-dependencies]
assert_approx_eq = "^1.0.0"
igc = "0.2.2"
env_logger = "0.8.2"
